<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInFragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.LoginFragment">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/shoeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/faster_one"
            android:text="@string/shoe"
            android:textSize="40dp"
            android:textColor="@color/red"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/storeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:fontFamily="@font/faster_one"
            android:text="Store"
            android:textSize="40dp"
            android:textColor="@color/red"
            app:layout_constraintLeft_toLeftOf="@id/shoeText"
            app:layout_constraintTop_toBottomOf="@id/shoeText" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="@color/red"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="@id/emailEditText"
            app:layout_constraintTop_toBottomOf="@id/storeText" />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:maxLines="1"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:textColorHint="@color/red"
            android:textColor="@color/red"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text"
            app:layout_constraintTop_toBottomOf="@id/emailText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/red"
            android:textSize="15dp"
            android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintLeft_toLeftOf="@id/emailEditText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/red"
           app:passwordToggleTint="@color/red"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/passwordText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColorHint="@color/red"
            app:layout_constraintRight_toRightOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:textColorHint="@color/red"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:textColorHighlight="@color/red"
                android:textColor="@color/red"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minWidth="300dp"
                android:textCursorDrawable="@null"
                android:background="@drawable/login_edit_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/roboto"
            android:background="@drawable/sign_in"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="20dp"
            android:background="@drawable/sign_in"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>