<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionFragment">
      <ScrollView
          android:id="@+id/scrollview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"

          >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginTop="40dp"
              android:layout_marginBottom="80dp"
              android:orientation="vertical">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/instructions"
                  android:textColor="@color/red"
                  android:fontFamily="@font/roboto"
                  android:textSize="30dp"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"
                  />

              <ImageView
                  android:layout_width="300dp"
                  android:layout_height="400dp"
                  android:layout_marginTop="30dp"
                  android:src="@drawable/list"
                  android:layout_gravity="center"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_marginBottom="20dp"
                  android:fontFamily="@font/roboto"
                  android:lineSpacingExtra="3dp"
                  android:text="@string/click_on_the_button_to_add_a_new_shoe_to_the_list_if_you_want_to_return_to_the_login_page_click_on_the_word_logout"
                  android:textAlignment="textStart"
                  android:textColor="@color/red"
                  android:textSize="16dp" />
              <ImageView
                  android:layout_width="300dp"
                  android:layout_height="400dp"
                  android:src="@drawable/add_shoes"
                  android:layout_gravity="center"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_marginBottom="20dp"
                  android:fontFamily="@font/roboto"
                  android:lineSpacingExtra="3dp"
                  android:text="@string/click_on_select_shoes_button_to_choose_shoes_you_want_to_add_then_enter_the_name_of_the_shoes_then_enter_the_name_of_the_company_then_enter_the_size_of_the_shoes_then_write_a_description_of_the_shoes_then_press_the_save_button_to_add_the_shoes_to_the_list_or_the_cancel_button_to_cancel_the_addition"
                  android:textAlignment="textStart"
                  android:textColor="@color/red"
                  android:textSize="16dp" />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="80dp"
                  android:layout_marginTop="40dp"
                  android:orientation="horizontal"
                  android:gravity="center"
                  >
                  <Button
                      android:id="@+id/instruction_button"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/next"
                      android:textColor="@color/white"
                      android:textSize="20dp"
                      android:background="@drawable/sign_in"
                      android:textAllCaps="false"
                      android:paddingLeft="30dp"
                      android:paddingRight="30dp"
                      />
              </LinearLayout>

          </LinearLayout>
      </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>